--- a/en/privacy-policy.html
+++ b/en/privacy-policy.html
@@ -3,7 +3,7 @@ layout: default_en
 title: "- en"
 description: 
 keywords: 
-permalink: /en/privacy-policy.html
+permalink: /en/Privacy-policy.html
 ---
 <div class="block" id="nexssPage">
   <div class="center">
