--- a/faq.html
+++ b/faq.html
@@ -139,11 +139,12 @@ permalink: /faq.html
                     <p>
                       There are hundreds features with free version, but:
 </p><ul>
-<li>compile any languages</li>
-<li>make your own language</li>
-<li>use around 50 languages together to deveop solutions</li>
-<li>create custom templates</li>
-<li>create custom error solutions for each language</li>
+<li>Compile any languages</li>
+<li>Make your own language</li>
+<li>Use over 50 languages together to deveop solutions</li>
+<li>Create custom templates</li>
+<li>Create custom error solutions for each language</li>
+<li>Use .nexss language see example: </li>
 </ul>
 
                     <p></p>
