Added favico and google analytics.

--- a/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
+++ b/369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
@@ -3,7 +3,15 @@ title: ""
 permalink: /369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
-  
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-97241406-1');
+</script>
+
   <title>
     BLOG Blender 3D - Nexss Programmer Nodes - exss-programmer-nodes
   </title>
@@ -28,7 +36,8 @@ permalink: /369_blog-blender-3D/nexss-programmer-nodes/nexss-blog.html
 <script src="assets/default/js/jquery.min.js"></script>
 <script src="assets/default/js/myscript.js"></script>
 <script src="assets/default/js/owl.carousel.min.js"></script>
-<script src="assets/default/js/wow.min.js"></script>   <meta name="revisit-after" content="7 days">
+<script src="assets/default/js/wow.min.js"></script>   <meta name="google-site-verification" content="">
+    <meta name="revisit-after" content="7 days">
   <meta name="creator" content="Nexss.com">
 </head>
 
