--- a/pl/nexss-programmer-features.html
+++ b/pl/nexss-programmer-features.html
@@ -137,6 +137,7 @@ permalink: /pl/nexss-programmer-features.html
       <span>Nexss Programmer 2.2.33</span>
       Features
     </div>
+    <a href="pl/programmer.html" class="btn btn__green">Dokumentacja</a>
         <h2>Features</h2>
 <h3>CLI TOOL</h3>
 <p>This is <strong>CLI TOOL</strong> which you can use on your machine, all compilators are installed on demand depends on your needs. It has command <code>nexss</code>. To display help use <code>nexss help</code></p>
@@ -190,52 +191,109 @@ nexss myprogram.php # compile php program</code></pre>
 <p>All programming languages in the Nexss Programmer has own repository.</p>
 <ul>
 <li>
-<p><strong> Fortran</strong> <a href="https://github.com/nexssp/language_fortran">https://github.com/nexssp/language_fortran</a></p>
+<p><strong> Kotlin</strong> <a href="https://github.com/nexssp/language_kotlin">https://github.com/nexssp/language_kotlin</a></p>
 </li>
 <li>
-<p><strong> Python 3</strong> <a href="https://github.com/nexssp/language_python">https://github.com/nexssp/language_python</a></p>
-</li>
-<li>
-<p><strong> Go</strong> <a href="https://github.com/nexssp/language_go">https://github.com/nexssp/language_go</a></p>
+<p><strong> Zig</strong> <a href="https://github.com/nexssp/language_zig">https://github.com/nexssp/language_zig</a></p>
 </li>
 <li>
 <p><strong> Typescript</strong> <a href="https://github.com/nexssp/language_typescript">https://github.com/nexssp/language_typescript</a></p>
 </li>
 <li>
+<p><strong> CSharp</strong> <a href="https://github.com/nexssp/language_csharp">https://github.com/nexssp/language_csharp</a></p>
+</li>
+<li>
+<p><strong> Fortran</strong> <a href="https://github.com/nexssp/language_fortran">https://github.com/nexssp/language_fortran</a></p>
+</li>
+<li>
 <p><strong> Hy</strong> <a href="https://github.com/nexssp/language_hy">https://github.com/nexssp/language_hy</a></p>
 </li>
 <li>
-<p><strong> Kotlin</strong> <a href="https://github.com/nexssp/language_kotlin">https://github.com/nexssp/language_kotlin</a></p>
+<p><strong> TCL/TK</strong> <a href="https://github.com/nexssp/language_tcltk">https://github.com/nexssp/language_tcltk</a></p>
+</li>
+<li>
+<p><strong> Autoit</strong> <a href="https://github.com/nexssp/language_autoit">https://github.com/nexssp/language_autoit</a></p>
+</li>
+<li>
+<p><strong> Coconut</strong> <a href="https://github.com/nexssp/language_coconut">https://github.com/nexssp/language_coconut</a></p>
+</li>
+<li>
+<p><strong> Dart</strong> <a href="https://github.com/nexssp/language_dart">https://github.com/nexssp/language_dart</a></p>
+</li>
+<li>
+<p><strong> Auto Hot Key</strong> <a href="https://github.com/nexssp/language_autohotkey">https://github.com/nexssp/language_autohotkey</a></p>
+</li>
+<li>
+<p><strong> Ada</strong> <a href="https://github.com/nexssp/language_ada">https://github.com/nexssp/language_ada</a></p>
 </li>
 <li>
 <p><strong> C++</strong> <a href="https://github.com/nexssp/language_cpp">https://github.com/nexssp/language_cpp</a></p>
 </li>
 <li>
-<p><strong> Erlang</strong> <a href="https://github.com/nexssp/language_erlang">https://github.com/nexssp/language_erlang</a></p>
+<p><strong> Pure Data</strong> <a href="https://github.com/nexssp/language_puredata">https://github.com/nexssp/language_puredata</a></p>
 </li>
 <li>
-<p><strong> LiveScript</strong> <a href="https://github.com/nexssp/language_livescript">https://github.com/nexssp/language_livescript</a></p>
+<p><strong> Clojure</strong> <a href="https://github.com/nexssp/language_clojure">https://github.com/nexssp/language_clojure</a></p>
+</li>
+<li>
+<p><strong> Julia</strong> <a href="https://github.com/nexssp/language_julia">https://github.com/nexssp/language_julia</a></p>
+</li>
+<li>
+<p><strong> Scheme</strong> <a href="https://github.com/nexssp/language_scheme">https://github.com/nexssp/language_scheme</a></p>
+</li>
+<li>
+<p><strong> PHP</strong> <a href="https://github.com/nexssp/language_php">https://github.com/nexssp/language_php</a></p>
+</li>
+<li>
+<p><strong> Go</strong> <a href="https://github.com/nexssp/language_go">https://github.com/nexssp/language_go</a></p>
+</li>
+<li>
+<p><strong> Haskell</strong> <a href="https://github.com/nexssp/language_haskell">https://github.com/nexssp/language_haskell</a></p>
 </li>
 <li>
 <p><strong> Haxe</strong> <a href="https://github.com/nexssp/language_haxe">https://github.com/nexssp/language_haxe</a></p>
 </li>
 <li>
-<p><strong> Racket</strong> <a href="https://github.com/nexssp/language_racket">https://github.com/nexssp/language_racket</a></p>
+<p><strong> Groovy</strong> <a href="https://github.com/nexssp/language_groovy">https://github.com/nexssp/language_groovy</a></p>
 </li>
 <li>
-<p><strong> JSON</strong> <a href="https://github.com/nexssp/language_json">https://github.com/nexssp/language_json</a></p>
+<p><strong> Scala</strong> <a href="https://github.com/nexssp/language_scala">https://github.com/nexssp/language_scala</a></p>
 </li>
 <li>
 <p><strong> Ruby</strong> <a href="https://github.com/nexssp/language_ruby">https://github.com/nexssp/language_ruby</a></p>
 </li>
 <li>
+<p><strong> V</strong> <a href="https://github.com/nexssp/language_v">https://github.com/nexssp/language_v</a></p>
+</li>
+<li>
+<p><strong> Elixir</strong> <a href="https://github.com/nexssp/language_elixir">https://github.com/nexssp/language_elixir</a></p>
+</li>
+<li>
+<p><strong> HTML</strong> <a href="https://github.com/nexssp/language_html">https://github.com/nexssp/language_html</a></p>
+</li>
+<li>
 <p><strong> Octave</strong> <a href="https://github.com/nexssp/language_octave">https://github.com/nexssp/language_octave</a></p>
 </li>
 <li>
-<p><strong> CSharp</strong> <a href="https://github.com/nexssp/language_csharp">https://github.com/nexssp/language_csharp</a></p>
+<p><strong> Racket</strong> <a href="https://github.com/nexssp/language_racket">https://github.com/nexssp/language_racket</a></p>
 </li>
 <li>
-<p><strong> Clojure</strong> <a href="https://github.com/nexssp/language_clojure">https://github.com/nexssp/language_clojure</a></p>
+<p><strong> Crystal</strong> <a href="https://github.com/nexssp/language_crystal">https://github.com/nexssp/language_crystal</a></p>
+</li>
+<li>
+<p><strong> JSON</strong> <a href="https://github.com/nexssp/language_json">https://github.com/nexssp/language_json</a></p>
+</li>
+<li>
+<p><strong> Java</strong> <a href="https://github.com/nexssp/language_java">https://github.com/nexssp/language_java</a></p>
+</li>
+<li>
+<p><strong> Nexss</strong> <a href="https://github.com/nexssp/language_nexss">https://github.com/nexssp/language_nexss</a></p>
+</li>
+<li>
+<p><strong> Bash</strong> <a href="https://github.com/nexssp/language_bash">https://github.com/nexssp/language_bash</a></p>
+</li>
+<li>
+<p><strong> Swift</strong> <a href="https://github.com/nexssp/language_scala">https://github.com/nexssp/language_scala</a></p>
 </li>
 <li>
 <p><strong> Coffee Script</strong> <a href="https://github.com/nexssp/language_coffee">https://github.com/nexssp/language_coffee</a></p>
@@ -244,102 +302,45 @@ nexss myprogram.php # compile php program</code></pre>
 <p><strong> Perl</strong> <a href="https://github.com/nexssp/language_perl">https://github.com/nexssp/language_perl</a></p>
 </li>
 <li>
-<p><strong> Bash</strong> <a href="https://github.com/nexssp/language_bash">https://github.com/nexssp/language_bash</a></p>
-</li>
-<li>
-<p><strong> Groovy</strong> <a href="https://github.com/nexssp/language_groovy">https://github.com/nexssp/language_groovy</a></p>
-</li>
-<li>
-<p><strong> PowerShell</strong> <a href="https://github.com/nexssp/language_powershell">https://github.com/nexssp/language_powershell</a></p>
-</li>
-<li>
-<p><strong> Scheme</strong> <a href="https://github.com/nexssp/language_scheme">https://github.com/nexssp/language_scheme</a></p>
-</li>
-<li>
-<p><strong> Crystal</strong> <a href="https://github.com/nexssp/language_crystal">https://github.com/nexssp/language_crystal</a></p>
-</li>
-<li>
-<p><strong> Swift</strong> <a href="https://github.com/nexssp/language_scala">https://github.com/nexssp/language_scala</a></p>
-</li>
-<li>
-<p><strong> Coconut</strong> <a href="https://github.com/nexssp/language_coconut">https://github.com/nexssp/language_coconut</a></p>
-</li>
-<li>
-<p><strong> HTML</strong> <a href="https://github.com/nexssp/language_html">https://github.com/nexssp/language_html</a></p>
-</li>
-<li>
-<p><strong> Nim</strong> <a href="https://github.com/nexssp/language_nim">https://github.com/nexssp/language_nim</a></p>
-</li>
-<li>
-<p><strong> Pure Data</strong> <a href="https://github.com/nexssp/language_puredata">https://github.com/nexssp/language_puredata</a></p>
-</li>
-<li>
-<p><strong> TCL/TK</strong> <a href="https://github.com/nexssp/language_tcltk">https://github.com/nexssp/language_tcltk</a></p>
-</li>
-<li>
-<p><strong> Scala</strong> <a href="https://github.com/nexssp/language_scala">https://github.com/nexssp/language_scala</a></p>
-</li>
-<li>
-<p><strong> Auto Hot Key</strong> <a href="https://github.com/nexssp/language_autohotkey">https://github.com/nexssp/language_autohotkey</a></p>
-</li>
-<li>
 <p><strong> Basic</strong> <a href="https://github.com/nexssp/language_basic">https://github.com/nexssp/language_basic</a></p>
-</li>
-<li>
-<p><strong> Elixir</strong> <a href="https://github.com/nexssp/language_elixir">https://github.com/nexssp/language_elixir</a></p>
-</li>
-<li>
-<p><strong> Haskell</strong> <a href="https://github.com/nexssp/language_haskell">https://github.com/nexssp/language_haskell</a></p>
 </li>
 <li>
 <p><strong> Raku</strong> <a href="https://github.com/nexssp/language_raku">https://github.com/nexssp/language_raku</a></p>
 </li>
 <li>
-<p><strong> Dart</strong> <a href="https://github.com/nexssp/language_dart">https://github.com/nexssp/language_dart</a></p>
-</li>
-<li>
 <p><strong> D</strong> <a href="https://github.com/nexssp/language_d">https://github.com/nexssp/language_d</a></p>
-</li>
-<li>
-<p><strong> PHP</strong> <a href="https://github.com/nexssp/language_php">https://github.com/nexssp/language_php</a></p>
-</li>
-<li>
-<p><strong> Julia</strong> <a href="https://github.com/nexssp/language_julia">https://github.com/nexssp/language_julia</a></p>
-</li>
-<li>
-<p><strong> C</strong> <a href="https://github.com/nexssp/language_c">https://github.com/nexssp/language_c</a></p>
-</li>
-<li>
-<p><strong> Nexss</strong> <a href="https://github.com/nexssp/language_nexss">https://github.com/nexssp/language_nexss</a></p>
-</li>
-<li>
-<p><strong> V</strong> <a href="https://github.com/nexssp/language_v">https://github.com/nexssp/language_v</a></p>
-</li>
-<li>
-<p><strong> Autoit</strong> <a href="https://github.com/nexssp/language_autoit">https://github.com/nexssp/language_autoit</a></p>
-</li>
-<li>
-<p><strong> Rust</strong> <a href="https://github.com/nexssp/language_rust">https://github.com/nexssp/language_rust</a></p>
 </li>
 <li>
 <p><strong> Lua</strong> <a href="https://github.com/nexssp/language_lua">https://github.com/nexssp/language_lua</a></p>
 </li>
 <li>
+<p><strong> VBScript</strong> <a href="https://github.com/nexssp/language_vbscript">https://github.com/nexssp/language_vbscript</a></p>
+</li>
+<li>
+<p><strong> PowerShell</strong> <a href="https://github.com/nexssp/language_powershell">https://github.com/nexssp/language_powershell</a></p>
+</li>
+<li>
+<p><strong> C</strong> <a href="https://github.com/nexssp/language_c">https://github.com/nexssp/language_c</a></p>
+</li>
+<li>
 <p><strong> R</strong> <a href="https://github.com/nexssp/language_r">https://github.com/nexssp/language_r</a></p>
 </li>
 <li>
-<p><strong> Java</strong> <a href="https://github.com/nexssp/language_java">https://github.com/nexssp/language_java</a></p>
-</li>
-<li>
-<p><strong> VBScript</strong> <a href="https://github.com/nexssp/language_vbscript">https://github.com/nexssp/language_vbscript</a></p>
+<p><strong> LiveScript</strong> <a href="https://github.com/nexssp/language_livescript">https://github.com/nexssp/language_livescript</a></p>
 </li>
 <li>
 <p><strong> NodeJS</strong> <a href="https://github.com/nexssp/language_nodejs">https://github.com/nexssp/language_nodejs</a></p>
 </li>
 <li>
-<p><strong> Ada</strong> <a href="https://github.com/nexssp/language_ada">https://github.com/nexssp/language_ada</a></p>
+<p><strong> Erlang</strong> <a href="https://github.com/nexssp/language_erlang">https://github.com/nexssp/language_erlang</a></p>
 </li>
-<li><strong> Zig</strong> <a href="https://github.com/nexssp/language_zig">https://github.com/nexssp/language_zig</a></li>
+<li>
+<p><strong> Python 3</strong> <a href="https://github.com/nexssp/language_python">https://github.com/nexssp/language_python</a></p>
+</li>
+<li>
+<p><strong> Rust</strong> <a href="https://github.com/nexssp/language_rust">https://github.com/nexssp/language_rust</a></p>
+</li>
+<li><strong> Nim</strong> <a href="https://github.com/nexssp/language_nim">https://github.com/nexssp/language_nim</a></li>
 </ul>
 <h4>Final Note</h4>
 <p><strong>All logos and trademarks used on this website and videos are the property of their respective owners.</strong></p>
