--- a/pl/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
+++ b/pl/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
@@ -131,7 +131,20 @@ permalink: /pl/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
       <div class="header__bottom">
     </div>
     </header>
-                <div class="block" id="nexssPage">
+                <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/github.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
+<script type="text/javascript">
+    document.addEventListener('DOMContentLoaded', (event) => {
+        // below was: pre code -> code
+        document.querySelectorAll('code').forEach((block) => {
+            hljs.highlightBlock(block);
+        });
+        // var y = document.querySelectorAll("pre code");
+        // for (var i = 0; i < y.length; i++) {
+        //   y[i].innerHTML = y[i].innerHTML.replace("\n", "");
+        // }
+    });
+</script><div class="block" id="nexssPage">
   <div class="center">
     <div class="block__title">
       <span>Nexss Programmer </span>
@@ -146,6 +159,7 @@ permalink: /pl/369_blog-blender-3D/custom-scripting-templates/nexss-blog.html
                 <b>Nexss Programmer</b>
         <ul>
                     <li><a href="pl/11_blog-nexss-programmer/introduction/nexss-blog.html">Introduction</a></li>
+                    <li><a href="pl/11_blog-nexss-programmer/tutorials/nexss-blog.html">Tutorials</a></li>
                   </ul>
                 <b>Blender 3D</b>
         <ul>
