--- a/programmerLanguages.html
+++ b/programmerLanguages.html
@@ -16,7 +16,7 @@ permalink: /programmer.html/Languages
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta name="keywords" content="nexss,compiler,```,languages,install,language">
+  <meta name="keywords" content="nexss,compiler,languages,```,`nexss,install">
   <meta name="description" content="Languages - Nexss Programmer Documentation">
   <!-- FAVICON -->
   <link rel="icon" href="favicon.ico">
@@ -92,6 +92,7 @@ permalink: /programmer.html/Languages
         <div class="d-flex flex-column flex-md-row">
             <div class="flex-shrink-0 col-12 col-md-9 mb-5 mb-md-0">
                 <p>List of all available languages: <a href="programmer.html/Nexss-Programmer-Programming-Languages">Nexss Programmer's Programming Languages List</a></p>
+<p>Note: Use <code>nexss cache rebuild</code> (2.2.38+) to rebuild cache while developing languages (also there is an option <code>--nocache</code>).</p>
 <p>Languages configuration are in the <strong>c:/Users/\&lt;yourusername&gt;/.nexss/languages/</strong><br>
 To see exact path for configuration for particular language write: <code>nexss php info</code> OR <code>nexss php config</code> (nexss [extension] info|config)</p>
 <p>They are downloaded on demand so if you add new file <code>nexss file add my.[extension]</code> and language is not installed it will download language implementation from Nexss Programmer Online Repository and display available templates.</p>
