--- a/programmer_.html
+++ b/programmer_.html
@@ -16,7 +16,7 @@ redirect_from: /programmer.html/
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta name="keywords" content="programmer,nexss,languages,<b><a,here,programming">
+  <meta name="keywords" content="programmer,nexss,languages,programming,language,<b><a">
   <meta name="description" content="Home - Nexss Programmer Documentation">
   <!-- FAVICON -->
   <link rel="icon" href="favicon.ico">
@@ -120,7 +120,7 @@ Programmer Documentation</code></pre>
 <p>more here: <a href="https://nexss.com/en/nexss-programmer-features.html">Nexss Programmer Features</a></p>
 <ul>
 <li><strong>Learning Tool</strong> - Students can learn modern and old(history) of the languages and don't have to spend a lot of time finding out about how to install compilers - so Universities, Schools, Individuals - Self-learners etc. More people would start to like programming..</li>
-<li><strong>Speed up producing</strong> - Add new file to work with and start from predefined templates, each language have own repo and templates folder,</li>
+<li><strong>Speed up producing</strong> - Compile program from any programming language quickly and easily. Add new file to work with and start from predefined templates, each language have own repo and templates folder,</li>
 <li><strong>Speed up learning</strong> - Error/Solution - has engine which parse the errors which can be specified in the Nexss Programmer's language file configuration, so display predefined solutions for particular error,</li>
 <li><strong>Automation tool</strong> - allows you to run programs in sequence in different programming languages and also pass variables to the next step (for now there is not implemented easy distributed solution),
 Here are the main features video: <a href="https://www.youtube.com/watch?v=z5scbto_yOM">https://www.youtube.com/watch?v=z5scbto_yOM</a></li>
